--- a/templates/weight/detail.html
+++ b/templates/weight/detail.html
@@ -4,14 +4,70 @@
     <meta charset="UTF-8">
     <title>Weight details</title>
     <script>
-        var chartData = [ {{ weightsString }} ]
+        //var chartData = [{{ weightsString }}]
+        var chartData = [ ['2016-03-01',93.0],['2016-04-01',95.0],['2016-05-01',92.0]];
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
+    <script>
+        $().ready(function () {
+            $.get('/api/weight/', function (data) {
+
+            });
+        });
     </script>
 </head>
 <body>
 <ul>
-{#  {% for weight in weights %}#}
-{#    <li>{{ weight.value }}</li>#}
-{#  {% endfor %}#}
+    {% for weight in weights %}
+        <li>{{ weight.value }}</li>
+    {% endfor %}
 </ul>
+<div style="width: 500px; height: 500px;">
+    <canvas id="weight-chart" width="400" height="400"></canvas>
+</div>
+<script>
+    $().ready(function () {
+        var labels = []; // x axis
+        var weightData = [];
+        $.each(chartData, function (index, value) {
+            labels.push(value[0]);
+            weightData.push(value[1]);
+        });
+        var ctx = $('#weight-chart'); // canvas id
+        var data = {
+            labels: labels,
+            datasets: [
+                {
+                    label: "My First dataset",
+                    fill: false,
+                    lineTension: 0.1,
+                    backgroundColor: "rgba(75,192,192,0.4)",
+                    borderColor: "rgba(75,192,192,1)",
+                    borderCapStyle: 'butt',
+                    borderDash: [],
+                    borderDashOffset: 0.0,
+                    borderJoinStyle: 'miter',
+                    pointBorderColor: "rgba(75,192,192,1)",
+                    pointBackgroundColor: "#fff",
+                    pointBorderWidth: 1,
+                    pointHoverRadius: 5,
+                    pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                    pointHoverBorderColor: "rgba(220,220,220,1)",
+                    pointHoverBorderWidth: 2,
+                    pointRadius: 1,
+                    pointHitRadius: 10,
+                    data: weightData,
+                    spanGaps: false
+                }
+            ]
+        };
+        var myLineChart = new Chart(ctx, {
+            type: 'line',
+            data: data
+            //options: options
+        });
+    })
+</script>
 </body>
 </html>
