--- a/templates/weight/detail.html
+++ b/templates/weight/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Weight details</title>
     <script>
-        var chartData = [ {{ weightsString }} ]
+        var chartData = [ {{ weightsString|safe }} ]
     </script>
 </head>
 <body>
