Added bootstrap glyphs

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 </div>
 <!--  end Preloader -->
 
-<div id="main-wrapper">
+<div id="main-wrapper" class="container">
 
     <header>
         <div id="logo" data-retina="true">
