--- a/templates/weight/detail.html
+++ b/templates/weight/detail.html
@@ -2,57 +2,112 @@
 {% block title %}{{ page_title }}{% endblock %}
 {% block header_scripts %}
     <script>
-        var chartData = [ {{ weightsString|safe }} ]
+        var chartData = [{{ weightsString|safe }}]
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 {% endblock %}
 {% block footer_scripts %}
     <script>
-    $().ready(function () {
-        var labels = []; // x axis
-        var weightData = [];
-        $.each(chartData, function (index, value) {
-            labels.push(value[0]);
-            weightData.push(value[1]);
-        });
-        var ctx = $('#weight-chart'); // canvas id
-        var data = {
-            labels: labels,
-            datasets: [
-                {
-                    label: "My weight dynamic",
-                    fill: false,
-                    lineTension: 0.1,
-                    backgroundColor: "rgba(75,192,192,0.4)",
-                    borderColor: "rgba(75,192,192,1)",
-                    borderCapStyle: 'butt',
-                    borderDash: [],
-                    borderDashOffset: 0.0,
-                    borderJoinStyle: 'miter',
-                    pointBorderColor: "rgba(75,192,192,1)",
-                    pointBackgroundColor: "#fff",
-                    pointBorderWidth: 1,
-                    pointHoverRadius: 5,
-                    pointHoverBackgroundColor: "rgba(75,192,192,1)",
-                    pointHoverBorderColor: "rgba(220,220,220,1)",
-                    pointHoverBorderWidth: 2,
-                    pointRadius: 1,
-                    pointHitRadius: 10,
-                    data: weightData,
-                    spanGaps: false
+        $().ready(function () {
+            var labels = []; // x axis
+            var weightData = [];
+            $.each(chartData, function (index, value) {
+                labels.push(value[0]);
+                weightData.push(value[1]);
+            });
+            var ctx = $('#weight-chart'); // canvas id
+            var data = {
+                labels: labels,
+                datasets: [
+                    {
+                        label: "My weight dynamic",
+                        fill: false,
+                        lineTension: 0.1,
+                        backgroundColor: "rgba(75,192,192,0.4)",
+                        borderColor: "rgba(75,192,192,1)",
+                        borderCapStyle: 'butt',
+                        borderDash: [],
+                        borderDashOffset: 0.0,
+                        borderJoinStyle: 'miter',
+                        pointBorderColor: "rgba(75,192,192,1)",
+                        pointBackgroundColor: "#fff",
+                        pointBorderWidth: 1,
+                        pointHoverRadius: 5,
+                        pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                        pointHoverBorderColor: "rgba(220,220,220,1)",
+                        pointHoverBorderWidth: 2,
+                        pointRadius: 1,
+                        pointHitRadius: 10,
+                        data: weightData,
+                        spanGaps: false
+                    }
+                ]
+            };
+            var myLineChart = new Chart(ctx, {
+                type: 'line',
+                data: data,
+                options: {
+                    legend: {
+                        position: 'bottom'
+
+                    }
                 }
-            ]
-        };
-        var myLineChart = new Chart(ctx, {
-            type: 'line',
-            data: data
-            //options: options
-        });
-    })
-</script>
+            });
+        })
+    </script>
 {% endblock %}
 {% block content %}
-<div style="width: 500px; height: 500px;">
-    <canvas id="weight-chart" width="400" height="400"></canvas>
-</div>
+    <div class="col-sm-12">
+        <h2 align="center">My Weight </h2>
+
+        <div class="text-center img-fullwidth">
+            <img align="middle" src="/static/img/weight.png">
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <br>
+        <form class="form-inline text-center">
+            <div class="form-group">
+                <input class="form-control" id="weight_date_start" placeholder="Date start">
+            </div>
+            <div class="form-group">
+                <input class="form-control" id="weight_date_end" placeholder="Date end">
+            </div>
+            <button type="submit" class="btn btn-primary">Get data</button>
+        </form>
+        <br>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-4">
+            <table class="table table-bordered table-striped">
+                <thead>
+                <tr>
+                    {% comment %}<th>#</th>{% endcomment %}
+                    <th>Date</th>
+                    <th>Weight</th>
+                    <th>Controls</th>
+                    <th>Diff</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for weight in weights %}
+                    <tr>
+                        {% comment %}<th scope="row"></th>{% endcomment %}
+                        <td>{{ weight.weight_date_time|date:"d.m.y" }}</td>
+                        <td>{{ weight.value }}</td>
+                        <th>
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </th>
+                        <td></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-12 col-md-8">
+            <div class="full-width-chart">
+                <canvas id="weight-chart"></canvas>
+            </div>
+        </div>
+    </div>
 {% endblock %}
