Weight layout changed

--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -1,3 +1,13 @@
+// images
+
+.img-fullwidth {
+  img {it
+    max-width: 100%;
+  }
+}
+
+// charts
+
 .full-width-chart {
   margin: 0 auto;
   width: 80%;
