--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -181,7 +181,8 @@ h2.plan-title  {
 	margin-bottom:10px;
 }
 
-/* BUTTONS */
+/*
+/!* BUTTONS *!/
 a.gal-bt {
   	z-index:2; 
 	position:absolute; 
@@ -246,6 +247,7 @@ a.button_medium:hover, .button_medium:hover, input.button_medium:hover {backgrou
 }
 
 .rating{ color:#FC0}
+*/
 
 /*============================================================================================*/
 /* 2.  PAGES AND CONTENT */
@@ -763,7 +765,7 @@ ul.recent_post li:last-child{
 
 .form-group { position:relative; margin-bottom:10px;}
 
-input.form-control, textarea.form-control {
+/*input.form-control, textarea.form-control {
 	background:none;
 	background-color:#fff;
 	border:1px solid #e2e2e2;
@@ -788,7 +790,7 @@ input.form-control:focus, textarea.form-control:focus, select.form-control:focus
   -webkit-box-shadow: none;
   box-shadow: none;
   color:#555;
-}
+}*/
 .loader {float:right; display:inline; margin-top:10px}
 #message-contact {margin: 10px 0; padding: 0;}
 .error_message { display: inline-block; background: #ed1c24; padding: 5px 8px; color:#fff;}
