--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,7 @@
 <script src="/static/js/retina-replace.min.js"></script>
 <script src="/static/js/jquery.placeholder.js"></script>
 <script src="/static/js/functions.js"></script>
+<script src="/static/js/scripts.js"></script>
 {% block footer_scripts %}
 {% endblock %}
 </body>
