Added CDN moment.js and datepicker.js/css

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,6 @@
     <link href="/static/css/style.css" rel="stylesheet">
     <link href="/static/css/menu.css" rel="stylesheet">
     <link href="/static/css/fontello.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/js/fancybox/source/jquery.fancybox.css?v=2.1.4">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -94,7 +93,8 @@
 
 <!-- JQUERY -->
 <script src="/static/js/jquery-1.10.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
 <!-- OTHER JS -->
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/retina-replace.min.js"></script>
