--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,54 +1,11 @@
-/*
-Error: Invalid CSS after "...max-width: 100%": expected "{", was ";"
-        on line 5 of styles.scss
+.img-fullwidth img {
+  max-width: 100%; }
 
-1: // images
-2: 
-3: .img-fullwidth {
-4:   img {it
-5:     max-width: 100%;
-6:   }
-7: }
-8: 
-9: // charts
-10: 
+.full-width-chart {
+  margin: 0 auto;
+  width: 80%; }
+  .full-width-chart > canvas {
+    height: 400px;
+    width: 400px; }
 
-Backtrace:
-styles.scss:5
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1164:in `expected'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1098:in `expected'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:1093:in `tok!'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:638:in `block'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:709:in `declaration_or_ruleset'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:658:in `block_child'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:647:in `block_contents'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:639:in `block'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:709:in `declaration_or_ruleset'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:658:in `block_child'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:647:in `block_contents'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:639:in `block'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:633:in `ruleset'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:657:in `block_child'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:647:in `block_contents'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:117:in `stylesheet'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/scss/parser.rb:42:in `parse'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/engine.rb:403:in `_to_tree'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/engine.rb:378:in `_render_with_sourcemap'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/engine.rb:295:in `render_with_sourcemap'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/plugin.rb:82:in `update_stylesheets'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/exec/sass_scss.rb:364:in `watch_or_update'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/exec/sass_scss.rb:51:in `process_result'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/exec/base.rb:52:in `parse'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/lib/sass/exec/base.rb:19:in `parse!'
-/var/lib/gems/1.9.1/gems/sass-3.4.16/bin/scss:13:in `<top (required)>'
-/usr/local/bin/scss:23:in `load'
-/usr/local/bin/scss:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...max-width: 100%\": expected \"{\", was \";\"\A         on line 5 of styles.scss\A \A 1: // images\A 2: \A 3: .img-fullwidth {\A 4:   img {it\A 5:     max-width: 100%;\A 6:   }\A 7: }\A 8: \A 9: // charts\A 10: "; }
+/*# sourceMappingURL=styles.css.map */
