added styles.css to base tmpl

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <!-- CSS -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/styles.css" rel="stylesheet">
     <link href="/static/css/menu.css" rel="stylesheet">
     <link href="/static/css/fontello.css" rel="stylesheet">
 
@@ -93,8 +94,10 @@
 
 <!-- JQUERY -->
 <script src="/static/js/jquery-1.10.min.js"></script>
+<!-- DATETIMEPICKER -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 <!-- OTHER JS -->
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/retina-replace.min.js"></script>
