--- a/templates/nutrition/detail.html
+++ b/templates/nutrition/detail.html
@@ -1,18 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Nutrition details</title>
-</head>
-<body>
-<ul>
-  {% for nutrition in nutrition_s %}
-      <li>{{ nutrition.meal.calories }}</li>
-      <li>{{ nutrition.meal.protein }}</li>
-      <li>{{ nutrition.meal.fat }}</li>
-      <li>{{ nutrition.meal.carbs }}</li>
-  {% endfor %}
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    <title>Nutrition details</title>#}
+{#</head>#}
+{#<body>#}
+{#<ul>#}
+{#  {% for nutrition in nutrition_s %}#}
+{#      <li>{{ nutrition.meal.calories }}</li>#}
+{#      <li>{{ nutrition.meal.protein }}</li>#}
+{#      <li>{{ nutrition.meal.fat }}</li>#}
+{#      <li>{{ nutrition.meal.carbs }}</li>#}
+{#  {% endfor %}#}
+{##}
+{#</ul>#}
+{#</body>#}
+{#</html>#}
+{% extends "base.html" %}
+{% block title %}{{ page_title }}{% endblock %}
+{% block header_scripts %}
+    <script>
+        var chartData = [{{ mealString|safe }}]
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
+{% endblock %}
+{% block footer_scripts %}
+    <script>
+        $().ready(function () {
+            var labels = []; // x axis
+            var nutritionData = [];
+            $.each(chartData, function (index, value) {
+                labels.push(value[0]);
+                nutritionData.push(value[1]);
+            });
+            var ctx = $('#nutrition-chart'); // canvas id
+            var data = {
+                labels: labels,
+                datasets: [
+                    {
+                        data: [300, 50, 100],
+                        backgroundColor: [
+                            "#FF6384",
+                            "#36A2EB",
+                            "#FFCE56"
+                        ],
+                        hoverBackgroundColor: [
+                            "#FF6384",
+                            "#36A2EB",
+                            "#FFCE56"
+                        ]
+                    }]
+            };
+            var myLineChart = new Chart(ctx, {
+                type: 'pie',
+                data: data,
+                options: {
+                    legend: {
+                        position: 'bottom'
 
-</ul>
-</body>
-</html>
+                    }
+                }
+            });
+        });
+    </script>
+{% endblock %}
+{% block content %}
+    <div class="col-sm-12">
+        {% for nutrition in nutritions %}
+            <h1 align="center">
+                {{ nutrition.name }}
+            </h1>
+        {% endfor %}
+        <div class="text-center img-fullwidth">
+            <img align="middle" src="/static/img/food.png">
+        </div>
+        <br>
+    </div>
+    <div class="col-sm-12 ">
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-1">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                    <td>
+                        {% comment %}<th>#</th>{% endcomment %}
+                    <th>Calories</th>
+                    <th>Protein</th>
+                    <th>Carbs</th>
+                    <th>Fat</th>
+                    </td>
+                    </thead>
+                    <tbody>
+                    {% for nutrition in nutritions %}
+                        <tr>
+                            {% comment %}<th scope="row"></th>{% endcomment %}
+                        <td>{{ nutrition.name }}</td>
+                        <td>{{ nutrition.calories }}</td>
+                        <td>{{ nutrition.protein }}</td>
+                        <td>{{ nutrition.carbs }}</td>
+                        <th>{{ nutrition.fat }}</th>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-sm-6 col-sm-offset-1">
+                <div class="full-width-chart">
+                    <canvas id="nutrition-chart"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
