--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
     <header>
         <div id="logo" data-retina="true">
-            <a href="index.html"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
+            <a href="../.."><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
         </div>
         <div class="col-md-12 col-sm-12">
             <a id="menu-button-mobile" href="#"><i class=" icon-menu"></i></a><!-- Menu button responsive-->
