added more to nutritions and style

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,15 +12,18 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon"/>
     <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
-
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114"
+          href="img/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144"
+          href="img/apple-touch-icon-144x144-precomposed.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- CSS -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
     <link href="/static/css/styles.css" rel="stylesheet">
     <link href="/static/css/menu.css" rel="stylesheet">
     <link href="/static/css/fontello.css" rel="stylesheet">
+    <link href="/static/css/floating_button.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -31,7 +34,7 @@
 <body>
 <!-- Preloader -->
 <div id="preloader">
-    <div id="status"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
+    <div id="status"><img src="/frontend/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
 </div>
 <!--  end Preloader -->
 
@@ -79,7 +82,6 @@
                             </ul>
                         </div><!-- End dropdown normal -->
                     </li>
-                    <li><a href="http://themeforest.net/item/activity-calories-calculators-and-sport-activity/8792981?ref=ansonika">Purchase this template</a></li>
                 </ul>
             </nav>
         </div> <!-- End col lg 12 -->
@@ -97,7 +99,8 @@
 <!-- DATETIMEPICKER -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css"
+      rel="stylesheet">
 <!-- OTHER JS -->
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/retina-replace.min.js"></script>
