--- a/templates/nutrition/list.html
+++ b/templates/nutrition/list.html
@@ -49,4 +49,33 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-12">
+        <div class="col-sm-1 col-sm-offset-11">
+            <a href="" class="float" data-toggle="modal"
+               data-target="#basicModal">
+                <i class="fa fa-plus my-float"></i>
+            </a>
+            <div class="label-container">
+                <div class="label-text">Add meal</div>
+                <i class="fa fa-play label-arrow"></i>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">blah</button>
+                    <h4 class="modal-title" id="myModalLabel">Add Meal</h4>
+                </div>
+                <div class="modal-body">
+                    <h3>Lorem ipsum</h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
