--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 <body>
 <!-- Preloader -->
 <div id="preloader">
-    <div id="status"><img src="/frontend/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
+    <div id="status"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
 </div>
 <!--  end Preloader -->
 
@@ -42,49 +42,27 @@
 
     <header>
         <div id="logo" data-retina="true">
-            <a href="../.."><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
+            <a href="/"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
         </div>
         <div class="col-md-12 col-sm-12">
             <a id="menu-button-mobile" href="#"><i class=" icon-menu"></i></a><!-- Menu button responsive-->
 
+
             <nav class="menu_container">
                 <ul class="menu">
-                    <li class="drop-normal"><a href="#" class="drop-down">Calculators</a>
-                        <div class="drop-down-container normal">
-                            <ul>
-                                <li><a href="daily-calorie-calculator.html">Daily calories calculator</a></li>
-                                <li><a href="calories-burned-by-heart-rate.html">Calories Burned by Heart rate</a></li>
-                                <li><a href="calories-burned-by-activities.html">Calories Burned by Activities</a></li>
-                                <li><a href="BMI-body-mass-calculator.html">BMI Body Mass Calculator</a></li>
-                            </ul>
-                        </div><!-- End dropdown normal -->
+                    <li class="menu"><a href="/weight">Weight</a></li>
+                    <li class="menu"><a href="/nutrition/">Food</a>
+{#                        <div class="drop-down-container normal">#}
+{#                            <ul>#}
+{#                                <li><a href="./nutrition/">List</a></li>#}
+{#                            </ul>#}
+{#                        </div><!-- End dropdown normal -->#}
                     </li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Programs</a>
-                        <div class="drop-down-container normal">
-                            <ul>
-                                <li><a href="cardio_program.html">Cardio Program</a></li>
-                                <li><a href="toning_program.html">Toning Program</a></li>
-                                <li><a href="functionality_program.html">Functionaly Program</a></li>
-                                <li><a href="body_and_mind_program.html">Body and Mind Program</a></li>
-                            </ul>
-                        </div><!-- End dropdown normal -->
-                    </li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Pages</a>
-                        <div class="drop-down-container normal">
-                            <ul>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="programs.html">Programs</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="widget/index.html">Widget version</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
-                                <li><a href="contacts.html">Contacts</a></li>
-                            </ul>
-                        </div><!-- End dropdown normal -->
-                    </li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Excersices</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Profile</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Help</a></li>
                 </ul>
             </nav>
-        </div> <!-- End col lg 12 -->
         <div id="header_shadow"></div>
     </header>
 
