added jquery cookie plugin

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css"
       rel="stylesheet">
+<!-- JQUERY COOKIE -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <!-- OTHER JS -->
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/retina-replace.min.js"></script>
