--- a/templates/weight/detail.html
+++ b/templates/weight/detail.html
@@ -74,7 +74,17 @@
         </div>
     </div>
     <div class="col-sm-12">
-        <br><br>
+        <br>
+        <form class="form-inline text-center" id="add_weight_form">
+            <div class="form-group">
+                <input class="form-control datetimepicker" id="weight_date" placeholder="Weighting date">
+            </div>
+            <div class="form-group">
+                <input class="form-control" id="weight_value" placeholder="Weight">
+            </div>
+            <button type="submit" class="btn btn-primary" id="add_weight_btn">Add weight</button>
+        </form>
+        <br>
     </div>
     <div class="row">
         <div class="col-sm-12 col-md-5">
