removed unused links

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,9 +58,9 @@
 {#                            </ul>#}
 {#                        </div><!-- End dropdown normal -->#}
                     </li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Excersices</a></li>
+                    {% comment %}<li class="drop-normal"><a href="#" class="drop-down">Excersices</a></li>
                     <li class="drop-normal"><a href="#" class="drop-down">Profile</a></li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Help</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Help</a></li>{% endcomment %}
                 </ul>
             </nav>
         <div id="header_shadow"></div>
